Update README.md
Included The update site and a brief description for local deploy